--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "dev.ext": "web-ext run --source-dir ./addon -f firefox --keep-profile-changes --firefox-profile ./build/profile-stable",
     "dev.ext.beta": "web-ext run --source-dir ./addon -f firefox-beta --keep-profile-changes --firefox-profile ./build/profile-beta",
     "dev.ext.nightly": "web-ext run --source-dir ./addon -f firefox-nightly --keep-profile-changes --firefox-profile ./build/profile-nightly",
+    "build.original.vendor": "node build/vendor.js -- dev",
+    "build.original.sidebar": "parcel build ./src/sidebar/sidebar.js -d ./addon/sidebar/ --public-url ./ --no-autoinstall --no-cache --no-minify",
+    "build.original.settings": "parcel build ./src/page.settings/settings.js -d ./addon/settings/ --public-url ./ --no-autoinstall --no-cache --no-minify",
+    "build.original.group": "parcel build ./src/page.group/group.js -d ./addon/group/ --public-url ./ --no-autoinstall --no-cache --no-minify",
+    "build.original.url": "parcel build ./src/page.url/url.js -d ./addon/url/ --public-url ./ --no-autoinstall --no-cache --no-minify",
+    "build.original.proxy": "parcel build ./src/popup.proxy/proxy.js -d ./addon/proxy/ --public-url ./ --no-autoinstall --no-cache --no-minify",
     "build.vendor": "node build/vendor.js -- build",
     "build.sidebar": "parcel build ./src/sidebar/sidebar.js -d ./addon/sidebar/ --public-url ./ --no-autoinstall --no-source-maps --no-cache",
     "build.settings": "parcel build ./src/page.settings/settings.js -d ./addon/settings/ --public-url ./ --no-autoinstall --no-source-maps --no-cache",
@@ -26,6 +32,7 @@
     "build.themes.tactile": "stylus ./src/styles/themes/tactile/sidebar.styl ./src/styles/themes/tactile/url.styl ./src/styles/themes/tactile/group.styl ./src/styles/themes/tactile/proxy.styl -c --out ./addon/themes/tactile/",
     "build.themes": "npm run build.themes.default && npm run build.themes.tactile",
     "build.ext": "web-ext build --source-dir ./addon -a dist/ -i __tests__",
+    "build.original": "npm run build.original.vendor && npm run build.original.sidebar && npm run build.original.settings && npm run build.original.group && npm run build.original.proxy && npm run build.original.url && npm run build.themes",
     "build": "npm run build.vendor && npm run build.sidebar && npm run build.settings && npm run build.group && npm run build.proxy && npm run build.url && npm run build.themes",
     "clear.cache": "rm -rf .cache",
     "clear.npm": "rm -rf node_modules package-lock.json",
